Feilhåndtering, ryddet i pom.xml, litt pent GUI

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -29,20 +29,13 @@
 </head>
 <body>
 
-<!-- Primary Page Layout
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="container">
     <div class="row">
         <div class="eleven columns">
-            <h3>Velkommen til bysykkeloversikten</h3>
-            {{>station}}
+            <h3>Beklager, noe gikk galt!</h3>
+            <p>Prøv igjen senere.</p>
         </div>
     </div>
-</div>
-
-<div class="container">
-    <h1>Velkommen til bysykkeloversikten</h1>
-    {{>station}}
 </div>
 
 </body>
