--- a/src/main/resources/templates/station.html
+++ b/src/main/resources/templates/station.html
@@ -1,7 +1,5 @@
-<div class="starter-template">
-    {{#stations}}
-    <h3>{{name}}</h3>
+ {{#stations}}
+    <b>{{name}}</b>
     <p>{{numAvailableLocks}} ledige plasser
      <br/> {{numAvailableBikes}} ledige sykler</p>
     {{/stations}}
-</div>
