--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -29,20 +29,13 @@
 </head>
 <body>
 
-<!-- Primary Page Layout
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="container">
     <div class="row">
         <div class="eleven columns">
-            <h3>Velkommen til bysykkeloversikten</h3>
-            {{>station}}
+            <h3>Det er ingenting her</h3>
+            <p>Gå <a href="../bysykkel">hit</a> isteden.</p>
         </div>
     </div>
-</div>
-
-<div class="container">
-    <h1>Velkommen til bysykkeloversikten</h1>
-    {{>station}}
 </div>
 
 </body>
